Bringing the page up to date

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li class="selected"><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publication list</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </div>
     </div>
