--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
           <li class="selected"><a href="publications.html">Publication list</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </div>
     </div>
@@ -40,12 +41,16 @@
 <span style="font-weight: bold;">Submitted:</span>
 <br>
 <br>
-[8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier--Stokes equations on moving domains, 2019 [<a href="http://arxiv.org/abs/1910.08616">preprint</a>]<br>
+[10] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2021)[<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
+<br>
+[9] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations (2021) [<a href="https://arxiv.org/abs/2103.13492">preprint</a>]<br>
 <br>
 
 <br>
 <span style="font-weight: bold;">Journal papers:</span>
 <br>
+<br>
+[8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier-Stokes equations on moving domains, J. Comp. Phys. 417 (2020) [<a href="https://doi.org/10.1016/j.jcp.2020.109577">article</a>] [<a href="http://arxiv.org/abs/1910.08616">preprint</a>]<br>
 <br>
 [7] K.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal. 57-4 (2019), pp. 1677-1696. [<a href="https://doi.org/10.1137/18M1202049">article</a>] [<a href="http://arxiv.org/abs/1812.00216">preprint</a>]<br>
 <br>
