--- a/research.html
+++ b/research.html
@@ -27,6 +27,7 @@
           <li><a href="index.html">Home</a></li>
           <li class="selected"><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publication list</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
         </ul>
       </div>
@@ -35,10 +36,6 @@
     <div id="site_content">
       <div id="content">
         <h1>Space-Time Hybridizable Discontinuous Galerkin on moving domains</h1>
-        Pressure field and velocity vectors for simulation of an incompressible flow around an oscillating NACA0012 aifoil.
-        <p><img src="NS_up_down.gif" width=600 height=400 alt="space-time" /></p>
-        <!-- insert the page content here -->
-        <h1>Hybridizable/Embedded Discontinuous Galerkin</h1>
         Discontinuous Galerkin schemes define the fluxes over element boundaries by using the unknowns from the 2 adjacent elements. Hybridizable/Embedded methods introduce
         additional unknowns on the element boundaries, the so-called facet unknowns, and the fluxes are defined using the unknowns from the current element and from the boundary. 
         For Hybridizable DG these additional unknowns represent discontinuous function on the boundaries, while for Embedded DG they represent continuous functions on the boundaries.
