Adding talks, creating sidebar, changing the layout

--- a/gallery.html
+++ b/gallery.html
@@ -25,50 +25,58 @@
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publication list</a></li>
           <li class="selected"><a href="gallery.html">Gallery</a></li>
+          <li><a href="talks.html">Talks</a></li>
         </ul>
       </div>
     </div>
     <div id="content_header"></div>
     <div id="site_content">
+      <div class="sidebar">
+        <!-- insert your sidebar items here -->
+        <h2>Latest News</h2>
+        <h4>March, 2022</h4>
+        <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
+        <p><a href="https://mfem.org/seminar/">More information</a></p>
+        <h4>November, 2021</h4>
+        <p>Out paper on Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
+        <h4>May, 2021</h4>
+        <p>Out paper on A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction, is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
+      </div>
       <div id="content">
 
-<!--<span style="font-weight: bold;">Submitted papers:</span><br>
-<br>
-[8] KK.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal., Accepted, 2019. [<a href="http://arxiv.org/abs/1812.00216">preprint</a>]
-<br>-->
 
 <br>
-<span style="font-weight: bold;">Fixed domain</span>
+<span style="font-weight: bold; font-size:20px;">Fixed domain</span>
 <br>
 <br>
-<iframe width="560" height="140" src="https://www.youtube.com/embed/qPfEf2jvCls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="140" src="https://www.youtube.com/embed/qPfEf2jvCls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="center"></iframe>
 <br>
 
 <br>
-<span style="font-weight: bold;">Prescribed domain motion</span>
+<span style="font-weight: bold; font-size:20px;">Prescribed domain motion</span>
 <br>
 <br>
-<iframe width="270" height="155" src="https://www.youtube.com/embed/dHzqDBfeAJg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="310" src="https://www.youtube.com/embed/dHzqDBfeAJg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe width="270" height="155" src="https://www.youtube.com/embed/K89FOx1adFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="310" src="https://www.youtube.com/embed/K89FOx1adFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 
 
 <br>
-<span style="font-weight: bold;">Fluid-ridig body interaction</span><br><br>
-<iframe width="270" height="155" src="https://www.youtube.com/embed/IhbWH1CzRgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<span style="font-weight: bold; font-size:20px;">Fluid-ridig body interaction</span><br><br>
+<iframe width="400" height="250" src="https://www.youtube.com/embed/IhbWH1CzRgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe width="270" height="155" src="https://www.youtube.com/embed/mqArbLveQLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="250" src="https://www.youtube.com/embed/mqArbLveQLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
-<iframe width="270" height="155" src="https://www.youtube.com/embed/fYhIOFUcQKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="250" src="https://www.youtube.com/embed/fYhIOFUcQKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe width="270" height="155" src="https://www.youtube.com/embed/3KtOJIqhgTA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="250" src="https://www.youtube.com/embed/3KtOJIqhgTA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
-<iframe width="270" height="155" src="https://www.youtube.com/embed/Py2TF6gXM0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="250" src="https://www.youtube.com/embed/Py2TF6gXM0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe width="270" height="155" src="https://www.youtube.com/embed/SHGBFrjce8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="250" src="https://www.youtube.com/embed/SHGBFrjce8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
       </div>
