--- a/publications.html
+++ b/publications.html
@@ -25,11 +25,23 @@
           <li><a href="research.html">Research</a></li>
           <li class="selected"><a href="publications.html">Publication list</a></li>
           <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="talks.html">Talks</a></li>
         </ul>
       </div>
     </div>
     <div id="content_header"></div>
     <div id="site_content">
+      <div class="sidebar">
+        <!-- insert your sidebar items here -->
+        <h2>Latest News</h2>
+        <h4>March, 2022</h4>
+        <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
+        <p><a href="https://mfem.org/seminar/">More information</a></p>
+        <h4>November, 2021</h4>
+        <p>Out paper on Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
+        <h4>May, 2021</h4>
+        <p>Out paper on A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction, is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
+      </div>
       <div id="content">
 
 <!--<span style="font-weight: bold;">Submitted papers:</span><br>
@@ -38,16 +50,16 @@
 <br>-->
 
 <br>
-<span style="font-weight: bold;">Submitted:</span>
+<span style="font-weight: bold; font-size:20px;">Submitted:</span>
 <br>
 <br>
-[10] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2021)[<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
+[10] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2021) [<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
 <br>
 [9] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations (2021) [<a href="https://arxiv.org/abs/2103.13492">preprint</a>]<br>
 <br>
 
 <br>
-<span style="font-weight: bold;">Journal papers:</span>
+<span style="font-weight: bold; font-size:20px;">Journal papers:</span>
 <br>
 <br>
 [8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier-Stokes equations on moving domains, J. Comp. Phys. 417 (2020) [<a href="https://doi.org/10.1016/j.jcp.2020.109577">article</a>] [<a href="http://arxiv.org/abs/1910.08616">preprint</a>]<br>
@@ -71,12 +83,12 @@ Equations, Volume
 
 
 <br>
-<span style="font-weight: bold;">Book chapter:</span><br><br>
+<span style="font-weight: bold; font-size:20px;">Book chapter:</span><br><br>
 [1] M. E. Mincsovics, T. L. Horvath: On the differences of the discrete weak and strong maximum principles for elliptic operators, Lecture Notes in Computer Science, Springer 7116, 2012, 614-621. [<a href="http://link.springer.com/chapter/10.1007%2F978-3-642-29843-1_70">chapter</a>]<br>
 <br>
 <br>
 
-<span style="font-weight: bold;">Thesis:</span><br>
+<span style="font-weight: bold; font-size:20px;">Thesis:</span><br>
 <br>
 [3] Horvath, T.: Adaptive Finite Element Methods for Elliptic Equations, PhD in Applied Mathematics, Eotvos University Budapest, 2014. [<a href="TH_PhD.pdf">pdf</a>]<br>
 <br>
@@ -87,14 +99,14 @@ Application to Convection-Diffusion Problems, Research Master, Von Karman Instit
 [1] Horvath, T.: Exact Number of Solutionf of Nonlinear Boundary Value Problems, in Hungarian, MSc in Applied Mathematics, Eotvos University Budapest, 2008. [<a href="TH_MSc.pdf">pdf</a>]<br>
 <br>
 
-<span style="font-weight: bold;">Student research:</span><br>
+<span style="font-weight: bold; font-size:20px;">Student research:</span><br>
 <br>
 [1] Horvath, T.: Exact Number of Solutions of a Boundary Value Problem Involving Singular Nonlinearity, in Hungarian, Eotvos University Budapest, Faculty of Science, Institute of Mathematics, 2007. 11. 30. [<a href="TDK_jav.pdf">pdf</a>]
 <br>
 
 <br>
 
-<span style="font-weight: bold;">Course notes:</span><br>
+<span style="font-weight: bold; font-size:20px;">Course notes:</span><br>
 <br>
 [6] H. Deconinck, T. de Mulder, T. L. Horvath: Introduction to finite volume and finite element methods for computational fluid dynamics, Introduction to Computational Fluid Dynamic, VKI Annual Lecture Series 2016.<br><br>
 
