--- a/research.html
+++ b/research.html
@@ -28,12 +28,24 @@
           <li class="selected"><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publication list</a></li>
           <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="talks.html">Talks</a></li>
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
         </ul>
       </div>
     </div>
     <div id="content_header"></div>
     <div id="site_content">
+      <div class="sidebar">
+        <!-- insert your sidebar items here -->
+        <h2>Latest News</h2>
+        <h4>March, 2022</h4>
+        <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
+        <p><a href="https://mfem.org/seminar/">More information</a></p>
+        <h4>November, 2021</h4>
+        <p>Out paper on Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
+        <h4>May, 2021</h4>
+        <p>Out paper on A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction, is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
+      </div>
       <div id="content">
         <h1>Space-Time Hybridizable Discontinuous Galerkin on moving domains</h1>
         Discontinuous Galerkin schemes define the fluxes over element boundaries by using the unknowns from the 2 adjacent elements. Hybridizable/Embedded methods introduce
