--- a/talks.html
+++ b/talks.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Tamas Horvath</title>
+  <title>Publications</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -21,14 +21,15 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publication list</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="talks.html">Talks</a></li>
+          <li class="selected"><a href="talks.html">Talks</a></li>
         </ul>
       </div>
     </div>
+    <div id="content_header"></div>
     <div id="site_content">
       <div class="sidebar">
         <!-- insert your sidebar items here -->
@@ -42,22 +43,37 @@
         <p>Out paper on A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction, is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
       </div>
       <div id="content">
-        <!-- insert the page content here -->
-        <IMG align=center src="TH.jpg" width="200"><br/> 
-        <h1>Welcome to my homepage!</h1>
-        <p>I am currently an Assistant Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="http://www.math.uwaterloo.ca/~srheberg/">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.cs.elte.hu/">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
-        
-        <p>Office: Oakland University<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Department of Mathematics and Statistics<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mathematics and Science Center<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MSC 347<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; email: thorvath at oakland dot edu<br>
 
-        <p>Address: Oakland University<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Department of Mathematics and Statistics<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 146 Library Drive<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rochester, MI 48309-4479<br>
-        
+<!--<span style="font-weight: bold;">Submitted papers:</span><br>
+<br>
+[8] KK.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal., Accepted, 2019. [<a href="http://arxiv.org/abs/1812.00216">preprint</a>]
+<br>-->
+
+<br>
+<span style="font-weight: bold; font-size:20px;">Upcoming talks:</span>
+<br>
+<br>
+Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL Seminar Series, March 29, 2022<br>
+<br>
+<br>
+<span style="font-weight: bold; font-size:20px;">Recent talks:</span>
+<br>
+<br>
+liding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
+<br>
+<br>
+Space-Time (Embedded-)Hybridized Discontinuous Galerkin Method for incompressible flow problems, colloquium talk, Oakland University, November 9, 2021.
+<br>
+<br>
+Mathematical and numerical modeling with differential equation, Hillsdale College, September 23, 2021.
+<br>
+<br>
+Space-Time discontinuous Galerkin methods for fluid-rigid body interaction problems, 16th USNCCM 2021, Virtual, July 25-29, 2021.
+<br>
+<br>
+Sliding Grid Techniques for Space-time Embedded-Hybridized Discontinuous Galerkin Method, ICOSAHOM 2020/2021, Virtual, July 12-16, 2021.
+<br>
+
       </div>
     </div>
     <div id="content_footer"></div>
