--- a/talks.html
+++ b/talks.html
@@ -38,9 +38,9 @@
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
         <p><a href="https://mfem.org/seminar/">More information</a></p>
         <h4>November, 2021</h4>
-        <p>Out paper on Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
         <h4>May, 2021</h4>
-        <p>Out paper on A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction, is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
       </div>
       <div id="content">
 
@@ -53,13 +53,13 @@
 <span style="font-weight: bold; font-size:20px;">Upcoming talks:</span>
 <br>
 <br>
-Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL Seminar Series, March 29, 2022<br>
+Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/">FEM@LLNL Seminar Series</a>, March 29, 2022<br>
 <br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent talks:</span>
 <br>
 <br>
-liding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
+Sliding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
 <br>
 <br>
 Space-Time (Embedded-)Hybridized Discontinuous Galerkin Method for incompressible flow problems, colloquium talk, Oakland University, November 9, 2021.
