--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
         <p><a href="https://mfem.org/seminar/">More information</a></p>
         <h4>November, 2021</h4>
-        <p>Out paper on Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
         <h4>May, 2021</h4>
-        <p>Out paper on A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction, is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
       </div>
       <div id="content">
         <!-- insert the page content here -->
         <IMG align=center src="TH.jpg" width="200"><br/> 
         <h1>Welcome to my homepage!</h1>
-        <p>I am currently an Assistant Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="http://www.math.uwaterloo.ca/~srheberg/">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.cs.elte.hu/">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
+        <p>I am currently an Assistant Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.cs.elte.hu/">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
         
         <p>Office: Oakland University<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Department of Mathematics and Statistics<br>
