Slides from MFEM talk

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
         <h2>Latest News</h2>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/seminar/">More information</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a></p>
         <h4>November, 2021</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
         <h4>May, 2021</h4>
@@ -57,7 +57,8 @@
 <br>
 <br>
 <iframe width="400" height="310" src="https://www.youtube.com/embed/dHzqDBfeAJg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<br>
+<br>
 <iframe width="400" height="310" src="https://www.youtube.com/embed/K89FOx1adFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 
@@ -65,17 +66,20 @@
 <br>
 <span style="font-weight: bold; font-size:20px;">Fluid-ridig body interaction</span><br><br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/IhbWH1CzRgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<br>
+<br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/mqArbLveQLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/fYhIOFUcQKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<br>
+<br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/3KtOJIqhgTA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/Py2TF6gXM0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<br>
+<br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/SHGBFrjce8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
