--- a/talks.html
+++ b/talks.html
@@ -36,7 +36,7 @@
         <h2>Latest News</h2>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/seminar/">More information</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a></p>
         <h4>November, 2021</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
         <h4>May, 2021</h4>
@@ -53,10 +53,13 @@
 <span style="font-weight: bold; font-size:20px;">Upcoming talks:</span>
 <br>
 <br>
-Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/">FEM@LLNL Seminar Series</a>, March 29, 2022<br>
+Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Fluid-Rigid Body Interaction Problems, WCCM 2022, (virtual)<br>
 <br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent talks:</span>
+<br>
+<br>
+Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/">FEM@LLNL Seminar Series</a>, March 29, 2022, <a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a><br>
 <br>
 <br>
 Sliding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
