--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
         <h2>Latest News</h2>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/seminar/">More information</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a></p>
         <h4>November, 2021</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
         <h4>May, 2021</h4>
