--- a/publications.html
+++ b/publications.html
@@ -3,8 +3,9 @@
 
 <head>
   <title>Publications</title>
-  <meta name="description" content="website description" />
-  <meta name="keywords" content="website keywords, website keywords" />
+  <meta name="description" content="Tamas Horvath Oakland University website" />
+  <meta name="keywords" content="Tamas Horvath, Oakland University, OU, Mathematics" />
+  <meta name="author" content="Tamas Horvath" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
 </head>
