Adding the MFEM YT video

--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
         <h2>Latest News</h2>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
         <h4>November, 2021</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
         <h4>May, 2021</h4>
@@ -48,7 +48,9 @@
       </div>
       <div id="content">
         <h1>Space-Time Hybridizable Discontinuous Galerkin on moving domains</h1>
-        Discontinuous Galerkin schemes define the fluxes over element boundaries by using the unknowns from the 2 adjacent elements. Hybridizable/Embedded methods introduce
+<iframe width="560" height="315" src="https://www.youtube.com/embed/v8-EubYMT-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        Discontinuous Galerkin schemes define the fluxes over element boundaries by using the unknowns from the two adjacent elements. Hybridizable/Embedded methods introduce
         additional unknowns on the element boundaries, the so-called facet unknowns, and the fluxes are defined using the unknowns from the current element and from the boundary. 
         For Hybridizable DG these additional unknowns represent discontinuous function on the boundaries, while for Embedded DG they represent continuous functions on the boundaries.
         The introductions of these additional unknowns will result in a large linear system; however, it can be reduced to the facet unknowns by using the Schur complement. This requires 
