Adding the IJNMF link

--- a/publications.html
+++ b/publications.html
@@ -35,13 +35,13 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
+        <h4>June, 2022</h4>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
         <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
         <h4>November, 2021</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
-        <h4>May, 2021</h4>
-        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
       </div>
       <div id="content">
 
@@ -54,14 +54,14 @@
 <span style="font-weight: bold; font-size:20px;">Submitted:</span>
 <br>
 <br>
-[10] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2021) [<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
-<br>
-[9] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations (2021) [<a href="https://arxiv.org/abs/2103.13492">preprint</a>]<br>
+[10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations (2021) [<a href="https://arxiv.org/abs/2103.13492">preprint</a>]<br>
 <br>
 
 <br>
 <span style="font-weight: bold; font-size:20px;">Journal papers:</span>
 <br>
+<br>
+[9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2022), accepted for publication to Int. J. Numer. Meth. Fluids [<a href="https://doi.org/10.1002/fld.5127">article</a>] [<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
 <br>
 [8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier-Stokes equations on moving domains, J. Comp. Phys. 417 (2020) [<a href="https://doi.org/10.1016/j.jcp.2020.109577">article</a>] [<a href="http://arxiv.org/abs/1910.08616">preprint</a>]<br>
 <br>
