--- a/talks.html
+++ b/talks.html
@@ -35,13 +35,13 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
+        <h4>June, 2022</h4>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
         <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
         <h4>November, 2021</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
-        <h4>May, 2021</h4>
-        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a>
       </div>
       <div id="content">
 
@@ -60,7 +60,7 @@ Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Fluid-Rigid Bod
 <span style="font-weight: bold; font-size:20px;">Recent talks:</span>
 <br>
 <br>
-Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/">FEM@LLNL Seminar Series</a>, March 29, 2022, <a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a><br>
+Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/">FEM@LLNL Seminar Series</a>, March 29, 2022, <a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a>
 <br>
 <br>
 Sliding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
