--- a/talks.html
+++ b/talks.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Publications</title>
+  <title>Talks</title>
   <meta name="description" content="Tamas Horvath Oakland University website" />
   <meta name="keywords" content="Tamas Horvath, Oakland University, OU, Mathematics" />
   <meta name="author" content="Tamas Horvath" />
