--- a/teaching.html
+++ b/teaching.html
@@ -26,8 +26,8 @@
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publication list</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="teaching.html">Teaching</a></li>
-          <li class="selected"><a href="talks.html">Talks</a></li>
+          <li class="selected"><a href="teaching.html">Teaching</a></li>
+          <li><a href="talks.html">Talks</a></li>
         </ul>
       </div>
     </div>
@@ -52,36 +52,34 @@
 <br>-->
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Upcoming talks</span>
+<span style="font-weight: bold; font-size:20px;">Current term (2022 Fall)</span>
 <br>
 <br>
-Embedded/hybridized DG: the best of both worlds, 2023 Spring AMS Central Sectional Meeting, (April 15-16, 2023)<br>
+No classes (medical leave)
 <br>
 <br>
-<span style="font-weight: bold; font-size:20px;">Recent talks</span>
+<span style="font-weight: bold; font-size:20px;">Upcoming term (2023 Winter)</span>
 <br>
 <br>
-Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Fluid-Rigid Body Interaction Problems, WCCM 2022, (virtual)
+APM 5441: Mathematical Analysis for Engineers I<br>
+<br>
+APM 6443: Numerical Methods for Partial Differential Equations<br>
+<br>
+<span style="font-weight: bold; font-size:20px;">Recent terms </span>
 <br>
 <br>
-Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/">FEM@LLNL Seminar Series</a>, March 29, 2022, <a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a>
+MTH 1555: Calculus II (2020 Fall, 2021 Fall)<br>
 <br>
+APM 5441: Mathematical Analysis for Engineers I (2021 Winter)<br>
 <br>
-Sliding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
+APM 5553: Advanced Ordinary Differential Equations (2021 Winter)<br>
 <br>
+MTH 1221: Linear Programming, Elementary Functions (2021 Summmer I)<br>
 <br>
-Space-Time (Embedded-)Hybridized Discontinuous Galerkin Method for incompressible flow problems, colloquium talk, Oakland University, November 9, 2021.
+APM 2555: Introduction to Differential Equations with Matrix Algebra (2021 Fall)<br>
 <br>
+APM 6443: Numerical Methods for Partial Differential Equations (2022 Winter)<br>
 <br>
-Mathematical and numerical modeling with differential equation, Hillsdale College, September 23, 2021.
-<br>
-<br>
-Space-Time discontinuous Galerkin methods for fluid-rigid body interaction problems, 16th USNCCM 2021, Virtual, July 25-29, 2021.
-<br>
-<br>
-Sliding Grid Techniques for Space-time Embedded-Hybridized Discontinuous Galerkin Method, ICOSAHOM 2020/2021, Virtual, July 12-16, 2021.
-<br>
-
       </div>
     </div>
     <div id="content_footer"></div>
