--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,7 @@
           <li><a href="research.html">Research</a></li>
           <li class="selected"><a href="publications.html">Publication list</a></li>
           <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="teaching.html">Teaching</a></li>
           <li><a href="talks.html">Talks</a></li>
         </ul>
       </div>
@@ -35,13 +36,13 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
+        <h4>August, 2022</h4>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796">Math Comp</a>
         <h4>June, 2022</h4>
         <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
         <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
-        <h4>November, 2021</h4>
-        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
       </div>
       <div id="content">
 
@@ -50,18 +51,14 @@
 [8] KK.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal., Accepted, 2019. [<a href="http://arxiv.org/abs/1812.00216">preprint</a>]
 <br>-->
 
-<br>
-<span style="font-weight: bold; font-size:20px;">Submitted:</span>
-<br>
-<br>
-[10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations (2021) [<a href="https://arxiv.org/abs/2103.13492">preprint</a>]<br>
-<br>
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Journal papers:</span>
+<span style="font-weight: bold; font-size:20px;">Journal papers</span>
 <br>
 <br>
-[9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2022), accepted for publication to Int. J. Numer. Meth. Fluids [<a href="https://doi.org/10.1002/fld.5127">article</a>] [<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
+[10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, accepted for publication to Mathematics of Computation (2022) [<a href="https://doi.org/10.1090/mcom/3796">article</a>] [<a href="https://arxiv.org/abs/2103.13492">preprint</a>]<br>
+<br>
+[9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2022), Int. J. Numer. Meth. Fluids, 94/11 (2022), pp. 1784-1809 [<a href="https://doi.org/10.1002/fld.5127">article</a>] [<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
 <br>
 [8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier-Stokes equations on moving domains, J. Comp. Phys. 417 (2020) [<a href="https://doi.org/10.1016/j.jcp.2020.109577">article</a>] [<a href="http://arxiv.org/abs/1910.08616">preprint</a>]<br>
 <br>
@@ -84,12 +81,12 @@ Equations, Volume
 
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Book chapter:</span><br><br>
+<span style="font-weight: bold; font-size:20px;">Book chapter</span><br><br>
 [1] M. E. Mincsovics, T. L. Horvath: On the differences of the discrete weak and strong maximum principles for elliptic operators, Lecture Notes in Computer Science, Springer 7116, 2012, 614-621. [<a href="http://link.springer.com/chapter/10.1007%2F978-3-642-29843-1_70">chapter</a>]<br>
 <br>
 <br>
 
-<span style="font-weight: bold; font-size:20px;">Thesis:</span><br>
+<span style="font-weight: bold; font-size:20px;">Thesis</span><br>
 <br>
 [3] Horvath, T.: Adaptive Finite Element Methods for Elliptic Equations, PhD in Applied Mathematics, Eotvos University Budapest, 2014. [<a href="TH_PhD.pdf">pdf</a>]<br>
 <br>
@@ -100,14 +97,14 @@ Application to Convection-Diffusion Problems, Research Master, Von Karman Instit
 [1] Horvath, T.: Exact Number of Solutionf of Nonlinear Boundary Value Problems, in Hungarian, MSc in Applied Mathematics, Eotvos University Budapest, 2008. [<a href="TH_MSc.pdf">pdf</a>]<br>
 <br>
 
-<span style="font-weight: bold; font-size:20px;">Student research:</span><br>
+<span style="font-weight: bold; font-size:20px;">Student research</span><br>
 <br>
 [1] Horvath, T.: Exact Number of Solutions of a Boundary Value Problem Involving Singular Nonlinearity, in Hungarian, Eotvos University Budapest, Faculty of Science, Institute of Mathematics, 2007. 11. 30. [<a href="TDK_jav.pdf">pdf</a>]
 <br>
 
 <br>
 
-<span style="font-weight: bold; font-size:20px;">Course notes:</span><br>
+<span style="font-weight: bold; font-size:20px;">Course notes</span><br>
 <br>
 [6] H. Deconinck, T. de Mulder, T. L. Horvath: Introduction to finite volume and finite element methods for computational fluid dynamics, Introduction to Computational Fluid Dynamic, VKI Annual Lecture Series 2016.<br><br>
 
