--- a/research.html
+++ b/research.html
@@ -29,6 +29,7 @@
           <li class="selected"><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publication list</a></li>
           <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="teaching.html">Teaching</a></li>
           <li><a href="talks.html">Talks</a></li>
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
         </ul>
@@ -39,13 +40,13 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
+        <h4>August, 2022</h4>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796">Math Comp</a>
         <h4>June, 2022</h4>
         <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
         <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
-        <h4>November, 2021</h4>
-        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a>
       </div>
       <div id="content">
         <h1>Space-Time Hybridizable Discontinuous Galerkin on moving domains</h1>
